Examples updates and some sonar adjustments