@@ -19,11 +19,11 @@ package br.com.uol.pagseguro.example;
 
 import java.math.BigDecimal;
 
-import br.com.uol.pagseguro.domain.AccountCredentials;
 import br.com.uol.pagseguro.domain.PaymentRequest;
 import br.com.uol.pagseguro.enums.Currency;
 import br.com.uol.pagseguro.enums.ShippingType;
 import br.com.uol.pagseguro.exception.PagSeguroServiceException;
+import br.com.uol.pagseguro.properties.PagSeguroConfig;
 
 public class CreatePayment {
 
@@ -39,11 +39,12 @@ public class CreatePayment {
         paymentRequest.setCurrency(Currency.REAL.getIso());
 
         // Add an item for this payment request
-        paymentRequest.addItem("0001", "Notebook Prata", new Integer(1), new BigDecimal("2430.00"), new Long(1000),
+        paymentRequest.addItem("0001", "Notebook Prata", Integer.valueOf(1), new BigDecimal("2430.00"), new Long(1000),
                 null);
 
         // Add another item for this payment request
-        paymentRequest.addItem("0002", "Notebook Rosa", new Integer(2), new BigDecimal("2560.00"), new Long(750), null);
+        paymentRequest.addItem("0002", "Notebook Rosa", Integer.valueOf(2), new BigDecimal("2560.00"), new Long(750),
+                null);
 
         // Sets a reference code for this payment request, it's useful to
         // identify this payment in future notifications.
@@ -52,36 +53,28 @@ public class CreatePayment {
         // Sets shipping information for this payment request
         paymentRequest.setShippingType(ShippingType.SEDEX);
 
-        // Sets value of shipping cost for this payment request
-        // paymentRequest.setShippingCost(new BigDecimal("2.00"));
-
         paymentRequest.setShippingAddress("BRA", "SP", "Sao Paulo", "Jardim Paulistano", "01452002",
                 "Av. Brig. Faria Lima", "1384", "5o andar");
 
-        // Sets your customer information.
-        paymentRequest.setSender("Joao Comprador", "comprador@uol.com.br", "11", "56273440");
+        // Sets value of shipping cost for this payment request
+        paymentRequest.setShippingCost(new BigDecimal("2.00"));
 
-        paymentRequest.addSenderDocument("CPF", "000.000.001-91");
+        // Sets your customer information.
+        paymentRequest.setSender("Joao Comprador", "comprador@uol.com.br", "11", "56273440", "CPF", "000.000.001-91");
 
         // Sets notificationURL information
         paymentRequest.setNotificationURL("http://www.meusite.com.br/notification");
 
         // Sets redirectURL
-        // paymentRequest.setRedirectURL("http://www.meusite.com.br/redir");
+        paymentRequest.setRedirectURL("http://www.meusite.com.br/redir");
 
         // Another way to set checkout parameters
-        paymentRequest.addParameter("redirectURL", "http://www.meusite.com.br/redir");
-        paymentRequest.addParameter("shippingCost", "5.00");
+        paymentRequest.addParameter("senderBornDate", "07/05/1981");
 
         paymentRequest.addIndexedParameter("itemId", "0003", 3);
         paymentRequest.addIndexedParameter("itemDescription", "Notebook prata", 3);
         paymentRequest.addIndexedParameter("itemQuantity", "1", 3);
         paymentRequest.addIndexedParameter("itemAmount", "200.00", 3);
-
-        paymentRequest.addIndexedParameter("itemId", "0010", 10);
-        paymentRequest.addIndexedParameter("itemDescription", "Outro Notebook Preto", 10);
-        paymentRequest.addIndexedParameter("itemQuantity", "2", 10);
-        paymentRequest.addIndexedParameter("itemAmount", "200.00", 10);
 
         // Add checkout metadata information
         paymentRequest.addMetaData("PASSENGER_CPF", "15600944276", 1);
@@ -90,17 +83,18 @@ public class CreatePayment {
 
         try {
 
-            // Register this payment request in PagSeguro, to obtain the payment
-            // URL for redirect your customer.
-            String paymentURL = paymentRequest.register(new AccountCredentials("vendedor@java.com",
-                    "00000000000000000000000000000000"));
+            Boolean onlyCheckoutCode = false;
 
-            // String paymentURL = paymentRequest.register(PagSeguroConfig.getAccountCredentials());
+            // Set your account credentials on src/pagseguro-config.properties
+            String paymentURL = paymentRequest.register(PagSeguroConfig.getAccountCredentials(), onlyCheckoutCode);
 
             System.out.println(paymentURL);
 
         } catch (PagSeguroServiceException e) {
             System.out.println(e.getMessage());
         }
+    }
+
+    private CreatePayment() {
     }
 }
