@@ -23,10 +23,10 @@ import java.util.Calendar;
 import java.util.Iterator;
 import java.util.List;
 
-import br.com.uol.pagseguro.domain.AccountCredentials;
 import br.com.uol.pagseguro.domain.TransactionSearchResult;
 import br.com.uol.pagseguro.domain.TransactionSummary;
 import br.com.uol.pagseguro.exception.PagSeguroServiceException;
+import br.com.uol.pagseguro.properties.PagSeguroConfig;
 import br.com.uol.pagseguro.service.TransactionSearchService;
 
 public class SearchTransactionByDate {
@@ -34,50 +34,60 @@ public class SearchTransactionByDate {
     public static void main(String[] args) throws SecurityException, NoSuchFieldException, IllegalArgumentException,
             IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 
-        TransactionSearchResult result = null;
+        TransactionSearchResult transactionSearchResult = null;
         try {
 
-            Calendar initialCalendar = Calendar.getInstance();
-            initialCalendar.set(2013, Calendar.DECEMBER, 01, 0, 00);
-            Calendar finalCalendar = Calendar.getInstance();
-            finalCalendar.set(2013, Calendar.DECEMBER, 10, 00, 00);
+            Calendar initialDate = Calendar.getInstance();
+            initialDate.set(2013, Calendar.NOVEMBER, 01, 0, 00);
 
-            // Substitute the parameters below with your credentials (e-mail and token)
-            AccountCredentials credentials = new AccountCredentials("vendedor@java.com",
-                    "00000000000000000000000000000000");
+            Calendar finalDate = Calendar.getInstance();
+            finalDate.set(2013, Calendar.NOVEMBER, 30, 00, 00);
 
-            result = TransactionSearchService.searchByDate(credentials, initialCalendar.getTime(),
-                    finalCalendar.getTime(), new Integer(01), new Integer(01));
+            Integer page = Integer.valueOf(1);
+
+            Integer maxPageResults = Integer.valueOf(10);
+
+            // Set your account credentials on src/pagseguro-config.properties
+            transactionSearchResult = TransactionSearchService.searchByDate(PagSeguroConfig.getAccountCredentials(),
+                    initialDate.getTime(), finalDate.getTime(), page, maxPageResults);
 
         } catch (PagSeguroServiceException e) {
             System.err.println(e.getMessage());
         }
 
-        if (result != null) {
-            System.out.println("Search date: " + result.getDate());
-            System.out.println(result.getResultsInThisPage() + " results in the page " + result.getPage() + " of "
-                    + result.getTotalPages() + " pages.");
+        if (transactionSearchResult != null) {
+            System.out.println("Search date: " + transactionSearchResult.getDate());
 
-            List<TransactionSummary> listTransactionSummaries = result.getTransactionSummaries();
+            List<TransactionSummary> listTransactionSummaries = transactionSearchResult.getTransactionSummaries();
             Iterator<TransactionSummary> transactionSummariesIterator = listTransactionSummaries.iterator();
+
             int counter = 0;
+
             while (transactionSummariesIterator.hasNext()) {
                 TransactionSummary currentTransactionSummary = (TransactionSummary) transactionSummariesIterator.next();
                 System.out.println();
                 System.out.println("Transaction: " + ++counter);
-                System.out.println("Code: " + currentTransactionSummary.getCode());
-                System.out.println("Reference: " + currentTransactionSummary.getReference());
-                System.out.println("Date: " + currentTransactionSummary.getDate());
-                System.out.println("Disccount amount: " + currentTransactionSummary.getDiscountAmount());
-                System.out.println("Extra amount: " + currentTransactionSummary.getExtraAmount());
-                System.out.println("Fee amount: " + currentTransactionSummary.getFeeAmount());
-                System.out.println("Transaction amount: " + currentTransactionSummary.getGrossAmount());
-                System.out.println("Last event date: " + currentTransactionSummary.getLastEvent());
-                System.out.println("Net amount: " + currentTransactionSummary.getNetAmount());
-                System.out.println("Payment method type: " + currentTransactionSummary.getPaymentMethod().getType());
-                System.out.println("Status: " + currentTransactionSummary.getStatus());
-                System.out.println("Type: " + currentTransactionSummary.getType());
+                System.out.println("date: " + currentTransactionSummary.getDate());
+                System.out.println("reference: " + currentTransactionSummary.getReference());
+                System.out.println("code: " + currentTransactionSummary.getCode());
+                System.out.println("type: " + currentTransactionSummary.getType().getTypeFromValue());
+                System.out.println("status: " + currentTransactionSummary.getStatus().getTypeFromValue());
+                System.out.println("paymentMethodType: "
+                        + currentTransactionSummary.getPaymentMethod().getType().getTypeFromValue());
+                System.out.println("grossAount: " + currentTransactionSummary.getGrossAmount());
+                System.out.println("disccountAmount: " + currentTransactionSummary.getDiscountAmount());
+                System.out.println("feeAmount: " + currentTransactionSummary.getFeeAmount());
+                System.out.println("netAmount: " + currentTransactionSummary.getNetAmount());
+                System.out.println("extraAmount: " + currentTransactionSummary.getExtraAmount());
+                System.out.println("lastEventDate: " + currentTransactionSummary.getLastEvent());
             }
+
+            System.out.println();
+            System.out.println(transactionSearchResult.getResultsInThisPage() + " result(s) in the page "
+                    + transactionSearchResult.getPage() + " of " + transactionSearchResult.getTotalPages() + " pages.");
         }
+    }
+
+    private SearchTransactionByDate() {
     }
 }
